2005-11-23  Dave Love  <fx@gnu.org>

	Add pop3s, pop3/starttls.

	* pop3.el (pop3-authentication-scheme): Clarify doc.
	(open-tls-stream, starttls-open-stream): Autoload.
	(pop3-stream-type): New.
	(pop3-open-server): Use it.

	* mail-source.el (mail-sources): Fix some :types.  Add stream type
	for POP.
	(mail-source-keyword-map): Add :stream for POP.
	(mail-source-fetch-pop): Use pop3-stream-type.

2005-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-fancy-expiry-target): Use current-time instead
	of current-time-string.

2005-11-20  Stefan Schimanski  <schimmi@debian.org>  (tiny change)

	* nnmail.el (nnmail-fancy-expiry-target): Protect against invalid
	date header.

2005-11-19  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-sum.el (gnus-fetch-old-headers): Updated docs to warn that
	it can seriously impact performance as it bypasses the agent's
	local caches.

2005-11-19  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (gnus-agent-possibly-synchronize-flags): A server
	must be explicitly online rather than "not explicitly offline" for
	its flags to be synchronized.

	* gnus-sum.el (gnus-summary-remove-process-mark): Always return t so
	that gnus-uu-unmark-thread will function correctly.

	* gnus-group.el (gnus-total-fetched-for): Reduced cutoff so that
	1024K is instead displayed as 1M.

2005-11-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* flow-fill.el (fill-flowed): Bind adaptive-fill-mode to nil.

2005-11-16  Boris Samorodov <bsam@ipt.ru>  (tiny patch)

	* imap.el (imap-kerberos4-open): Ignore SSL stuff.

2005-11-13  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (gnus-agent-read-local): Trivial fix to format of
	error message to display actual error condition.
	(gnus-agent-save-local): Avoid saving symbols that are bound to
	nil as they simply result in a warning message in
	gnus-agent-read-local.

2005-11-13  Katsumi Yamaoka  <yamaoka@jpl.org>
